# eventio_cpp

./: CMakeLists.txt
cli/: read_eventio.cpp
include/eventio/: File.h  Object.h
src/: File.cpp  Object.cpp
tests/: CMakeLists.txt  test_file.cpp
